🔧 修復：禁用 LIFF 環境中的自動跳轉，解決循環登入問題

--- a/index.html
+++ b/index.html
@@ -219,12 +219,18 @@
 
 <script src="./assets/auth.js"></script>
 <script>
-// 檢查是否已登入，自動跳轉
+// 🔧 修復循環登入：只在網頁版自動跳轉，LIFF 環境不跳轉
 window.addEventListener('load', async () => {
-  const isLoggedIn = await AUTH.isLoggedIn();
-  if (isLoggedIn) {
-    // 已經登入，直接跳轉到會員中心
-    window.location.href = 'profile.html';
+  // 檢查是否在 LIFF 環境中
+  const isInLIFF = window.location.href.includes('liff.line.me');
+  
+  // 只在普通網頁環境（非 LIFF）才自動跳轉
+  if (!isInLIFF) {
+    const isLoggedIn = await AUTH.isLoggedIn();
+    if (isLoggedIn) {
+      // 已經登入，直接跳轉到會員中心
+      window.location.href = 'profile.html';
+    }
   }
 });
 </script>
