--- a/profile.html
+++ b/profile.html
@@ -58,8 +58,8 @@ async function initLiff() {
     // 🔧 檢查會員是否存在，不存在則跳轉到註冊頁面
     if (!data || !data.success || data.success === false) {
       console.log('❌ 會員不存在，跳轉到註冊頁面');
-      alert('您還不是會員，請先註冊！\n\n將為您跳轉到註冊頁面...');
-      window.location.href = 'register.html';  // 🔧 改為跳轉到註冊頁面而不是首頁
+      // 🔧 使用絕對 LIFF URL，移除 alert（LIFF 環境中 alert 可能有問題）
+      window.location.replace('https://liff.line.me/2008231108-2PDbO5qk/register.html');
       return;
     }
     
