--- a/核心文件/profile.html
+++ b/核心文件/profile.html
@@ -27,7 +27,7 @@ async function initLiff() {
     // 記錄開始時間
     const startTime = Date.now();
     
-    await liff.init({ liffId: "2008231108-2PDbO5qk" });
+    await liff.init({ liffId: "2008231108-j2MEXkz4" });
     
     if (!liff.isLoggedIn()) {
       // 🔧 優化：使用 redirectUri 保留當前頁面
