--- a/referral-stats.html
+++ b/referral-stats.html
@@ -254,15 +254,15 @@
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     // 配置
-    const LIFF_ID = "2008231108-0rAX3R5d"; // 使用會員中心的 LIFF ID
-    const API_URL = 'https://script.google.com/macros/s/AKfycbzMUwqroi_W_5m7rcjVs-U-o6tEo9W0327BeMmU38Rxinmycd5d1HyyF3BnugGvNF6r/exec';
+    const LIFF_ID = "2008231108-2PDbO5qk";
+    const API_URL = 'https://script.google.com/macros/s/AKfycbxh10yJHbTDcwBDTX_V30jRR4CqshDc3pePR0t_rPqCxZg40h636WKIo3-Y--L0cDnP/exec';
     
     let lineUserId = '';
 
     // 初始化 LIFF
     async function initLiff() {
       try {
-        await liff.init({ liffId: LIFF_ID }); // 使用統一的 LIFF ID
+        await liff.init({ liffId: LIFF_ID });
         
         if (!liff.isLoggedIn()) {
           liff.login();
