🔧 修復循環登入：統一 LIFF ID，避免不匹配導致循環

--- a/index.html
+++ b/index.html
@@ -210,21 +210,10 @@
 // 用戶需要主動點擊按鈕才會登入
 
 // LINE 快速登入按鈕處理
-document.querySelector('.btn-line')?.addEventListener('click', async () => {
-  // 使用 LINE LIFF 登入
-  if (typeof liff !== 'undefined') {
-    try {
-      await liff.init({ liffId: "2008231108-0rAX3R5d" });
-      if (!liff.isLoggedIn()) {
-        liff.login({ redirectUri: window.location.origin + '/member-system/profile.html' });
-      } else {
-        window.location.href = 'profile.html';
-      }
-    } catch (error) {
-      console.error('LINE 登入錯誤:', error);
-      alert('LINE 登入失敗，請稍後再試');
-    }
-  }
+document.querySelector('.btn-line')?.addEventListener('click', () => {
+  // 🔧 直接跳轉到 profile.html，讓它處理 LIFF 登入
+  // 避免在首頁初始化 LIFF 造成循環
+  window.location.href = 'profile.html';
 });
 
 // 帳號密碼登入按鈕
