🎯 批量修復：統一所有11個頁面的LIFF ID為2008231108-0rAX3R5d

--- a/product-detail.html
+++ b/product-detail.html
@@ -159,7 +159,7 @@ let currentProduct = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-j2MEXkz4" }); // 使用會員中心的 LIFF ID
+    await liff.init({ liffId: "2008231108-0rAX3R5d" }); // 統一使用主要 LIFF ID
     
     if (!liff.isLoggedIn()) {
       liff.login({ redirectUri: window.location.href });
