--- a/purchase.html
+++ b/purchase.html
@@ -233,7 +233,7 @@ let referrerInfo = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-j2MEXkz4" }); // 使用會員中心的 LIFF ID
+    await liff.init({ liffId: "2008231108-0rAX3R5d" }); // 統一使用主要 LIFF ID
     
     if (!liff.isLoggedIn()) {
       liff.login({ redirectUri: window.location.href });
