--- a/transfer.html
+++ b/transfer.html
@@ -136,7 +136,7 @@ function safeCloseWindow() {
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-2PDbO5qk" });
+    await liff.init({ liffId: "2008231108-0rAX3R5d" });
     
     if (!liff.isLoggedIn()) {
       // 🔧 優化：使用 redirectUri 保留當前頁面
