🔥緊急修復：LIFF ID 2008231108-0rAX3R5d不存在，全部改回2008231108-2PDbO5qk

--- a/history.html
+++ b/history.html
@@ -114,7 +114,7 @@
 
 <script src="./assets/cache-manager.js"></script>
 <script>
-const LIFF_ID = "2008231108-0rAX3R5d"; // 統一使用主要 LIFF ID
+const LIFF_ID = "2008231108-2PDbO5qk"; // 統一使用主要 LIFF ID
 const API_URL = "https://script.google.com/macros/s/AKfycbxh10yJHbTDcwBDTX_V30jRR4CqshDc3pePR0t_rPqCxZg40h636WKIo3-Y--L0cDnP/exec";
 
 // 🔧 安全關閉視窗函數
