--- a/my-orders.html
+++ b/my-orders.html
@@ -274,7 +274,7 @@ let allOrders = [];
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-0rAX3R5d" }); // 統一使用主要 LIFF ID
+    await liff.init({ liffId: "2008231108-2PDbO5qk" }); // 統一使用主要 LIFF ID
     
     if (!liff.isLoggedIn()) {
       liff.login({ redirectUri: window.location.href });
