--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@ async function initLiff() {
     // 記錄開始時間
     const startTime = Date.now();
     
-    await liff.init({ liffId: "2008231108-0rAX3R5d" }); // 🔧 統一使用會員中心的 LIFF ID
+    await liff.init({ liffId: "2008231108-2PDbO5qk" }); // 🔧 統一使用主要 LIFF ID
     
     if (!liff.isLoggedIn()) {
       // 🔧 優化：使用 redirectUri 保留當前頁面
