--- a/admin.html
+++ b/admin.html
@@ -573,7 +573,7 @@ let adjustData = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-0rAX3R5d" }); // 統一使用主要 LIFF ID
+    await liff.init({ liffId: "2008231108-2PDbO5qk" }); // 統一使用主要 LIFF ID
     
     if (!liff.isLoggedIn()) {
       liff.login();
