🎯 徹底修復循環：所有頁面跳轉都改用完整LIFF URL，避免跳出LINE

--- a/mall.html
+++ b/mall.html
@@ -438,7 +438,7 @@ function filterCategory(category) {
 
 // 查看商品詳情
 function viewProduct(productId) {
-  window.location.href = `product-detail.html?id=${productId}`;
+  window.location.href = `https://liff.line.me/2008231108-2PDbO5qk/product-detail.html?id=${productId}`;
 }
 
 // 購買商品
@@ -488,7 +488,7 @@ async function buyProduct(productId) {
       
       setTimeout(() => {
         if (confirm('是否要查看訂單詳情？')) {
-          window.location.href = 'my-orders.html';
+          window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/my-orders.html';
         }
       }, 1500);
     } else {
@@ -514,7 +514,7 @@ function showMessage(msg, type) {
 }
 
 function goBack() {
-  window.location.href = 'profile.html';
+  window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/profile.html';
 }
 
 // 🚀 圖片懶加載
