--- a/my-orders.html
+++ b/my-orders.html
@@ -542,11 +542,11 @@ function showError(message) {
 }
 
 function goBack() {
-  window.location.href = 'profile.html';
+  window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/profile.html';
 }
 
 function goMall() {
-  window.location.href = 'mall.html';
+  window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/mall.html';
 }
 
 initLiff();
