--- a/profile.html
+++ b/profile.html
@@ -66,7 +66,7 @@ async function initLiff() {
           <p style="color: #666; margin: 20px 0;">
             ${data && data.message ? data.message : '找不到會員資料，您可能尚未註冊'}
           </p>
-          <a href="register.html" class="btn btn-primary" style="display: inline-block; margin: 10px; padding: 15px 30px; background: #667eea; color: white; text-decoration: none; border-radius: 8px; font-weight: bold;">
+          <a href="https://liff.line.me/2008231108-2PDbO5qk/register.html" class="btn btn-primary" style="display: inline-block; margin: 10px; padding: 15px 30px; background: #667eea; color: white; text-decoration: none; border-radius: 8px; font-weight: bold;">
             📝 前往註冊
           </a>
           <button class="btn btn-secondary" onclick="location.reload()" style="display: inline-block; margin: 10px; padding: 15px 30px; background: #6c757d; color: white; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">
@@ -443,44 +443,45 @@ function renderProfile(data, pictureUrl, displayName) {
 
 // 快取函數已移至 cache-manager.js 統一管理
 
+// 🔧 修復：所有跳轉都使用完整 LIFF URL，避免在 LINE 中跳出
 function goMall() {
-  window.location.href = "mall.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/mall.html";
 }
 
 function goUploadProduct() {
-  window.location.href = "upload-product.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/upload-product.html";
 }
 
 function goPurchase() {
-  window.location.href = "purchase.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/purchase.html";
 }
 
 function goMyOrders() {
-  window.location.href = "my-orders.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/my-orders.html";
 }
 
 function goWithdraw() {
-  window.location.href = "withdraw.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/withdraw.html";
 }
 
 function goWithdrawalHistory() {
-  window.location.href = "withdrawal-history.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/withdrawal-history.html";
 }
 
 function goTransfer() {
-  window.location.href = "transfer.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/transfer.html";
 }
 
 function goHistory() {
-  window.location.href = "history.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/history.html";
 }
 
 function editProfile() {
-  window.location.href = "edit.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/edit.html";
 }
 
 function goSetPassword() {
-  window.location.href = "set-password.html";
+  window.location.href = "https://liff.line.me/2008231108-2PDbO5qk/set-password.html";
 }
 
 // 🎁 複製推薦碼
