--- a/purchase.html
+++ b/purchase.html
@@ -447,7 +447,7 @@ function showMessage(msg, type) {
 }
 
 function goBack() {
-  window.location.href = 'profile.html';
+  window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/profile.html';
 }
 
 initLiff();
