--- a/referral-stats.html
+++ b/referral-stats.html
@@ -360,7 +360,7 @@
       if (liff.isInClient()) {
         liff.closeWindow();
       } else {
-        window.location.href = 'profile.html';
+        window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/profile.html';
       }
     }
 
