--- a/withdraw.html
+++ b/withdraw.html
@@ -336,7 +336,7 @@ document.getElementById('withdrawForm').addEventListener('submit', async functio
       
       // 3 秒後跳轉
       setTimeout(() => {
-        window.location.href = 'profile.html';
+        window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/profile.html';
       }, 3000);
     } else {
       showMessage('❌ ' + (data.message || '提領失敗'), 'error');
