--- a/withdrawal-history.html
+++ b/withdrawal-history.html
@@ -322,7 +322,7 @@ function formatDate(timestamp) {
 }
 
 function goBack() {
-  window.location.href = 'profile.html';
+  window.location.href = 'https://liff.line.me/2008231108-2PDbO5qk/profile.html';
 }
 
 // 啟動
